<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoPantalla"
    tools:context=".WelcomeActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="201dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="@string/bienvenido"
        android:textColor="@color/textoColor"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="326dp"
        android:layout_height="117dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/dando_bienbenida"
        android:textAlignment="center"
        android:textColor="@color/textoColor"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.042" />

    <Button
        android:id="@+id/omitir"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="90dp"
        android:backgroundTint="@color/botones"
        android:fontFamily="sans-serif-condensed"
        android:onClick="omitir"
        android:text="@string/omitir_todo"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:circularflow_defaultRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/siguiente"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="35dp"
        android:backgroundTint="@color/botones"
        android:drawableEnd="@drawable/baseline_arrow_circle_right_24"
        android:fontFamily="sans-serif-condensed"
        android:onClick="goToInstructions"
        android:text="@string/siguiente"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="56dp"
        android:layout_height="27dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/_1_de_2"
        android:textColor="@color/textoColor"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="328dp"
        android:layout_height="114dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/dando_bienbenida"
        android:textAlignment="center"
        android:textColor="@color/textoColor"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.052" />
</androidx.constraintlayout.widget.ConstraintLayout>